Adição de modificações HTML e estilização CSS

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,22 @@
 * {
-    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
+h1 {
+    font-family: 'Press Start 2P', cursive;
+    color: white;
+}
 body {
-    background-color: #f6f8fc;
+    background-color: #000000;
+    font-family: 'Roboto', sans-serif;
+   
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #36383773;
 }
 
 @media screen and (min-width: 992px) {
@@ -20,5 +25,6 @@ body {
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
+     
     }
 }
