--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #bfc7d8;
 }
 
 .content {
@@ -20,5 +20,11 @@ body {
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
+    }
+
+    h1 {
+     background-color: rgb(248, 248, 248);
+    color: blue;
+    transition: 2s;
     }
 }
