ajustes no html e css

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,17 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Handjet', sans-serif;
     box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #656877;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #656877;
 }
 
 @media screen and (min-width: 992px) {
