--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -7,75 +7,81 @@
 }
 
 .normal {
-    background-color: #a6a877;
+    background: linear-gradient(to left, #a6a877, #b3b659);
 }
 
 .grass {
-    background-color: #77c850;
+    background: linear-gradient(to left, #579938, #77c850);
 }
 
 .fire {
-    background-color: #ee7f30;
+    background: linear-gradient(to left, #ca6d2a, #ee7f30);
 }
 
 .water {
-    background-color: #678fee;
+    background: linear-gradient(to left, #4765ac, #678fee);
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background: linear-gradient(to left, #c5a421, #f7cf2e);
 }
 
 .ice {
-    background-color: #98d5d7;
+    background: linear-gradient(to left, #79acad, #98d5d7);
 }
 
 .ground {
-    background-color: #dfbf69;
+    background: linear-gradient(to left, #b89d54, #dfbf69);
 }
 
 .flying {
-    background-color: #a98ff0;
+    background: linear-gradient(to left, #816cb9, #a98ff0);
 }
 
 .poison {
-    background-color: #a040a0;
+    background: linear-gradient(to left, #863586, #a040a0);
 }
 
 .fighting {
-    background-color: #bf3029;
+    background: linear-gradient(to left, #9c2822, #bf3029);
 }
 
 .psychic {
-    background-color: #f65687;
+    background: linear-gradient(to left, #cc476f, #f65687);
 }
 
 .dark {
-    background-color: #725847;
+    background: linear-gradient(to left, #5a4435, #725847);
 }
 
 .rock {
-    background-color: #b8a137;
+    background: linear-gradient(to left, #8d7a24, #b8a137);
 }
 
 .bug {
-    background-color: #a8b720;
+    background: linear-gradient(to left, #86921b, #a8b720);
 }
 
 .ghost {
-    background-color: #6e5896;
+    background: linear-gradient(to left, #554375, #6e5896);
 }
 
 .steel {
-    background-color: #b9b7cf;
+    background: linear-gradient(to left, #8a88a0, #b9b7cf);
 }
 
 .dragon {
-    background-color: #6f38f6;
+    background: linear-gradient(to left, #532eb1, #6f38f6);
 }
 
 .fairy {
-    background-color: #f9aec7;
+    background: linear-gradient(to left, #b86b85, #f9aec7);
+}
+
+.logo {
+    max-width: 100%;
+    height: 90px;
+    filter: saturate(2);
 }
 
 .pokemon {
@@ -84,13 +90,15 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.678);
 }
 
 .pokemon .number {
     color: #000;
     opacity: .3;
     text-align: right;
-    font-size: .625rem;
+    font-size: 1rem;
+    font-weight: 900;
 }
 
 .pokemon .name {
@@ -127,6 +135,14 @@
     height: 70px;
 }
 
+.pokemon .detail img:hover {
+    max-width: 120%;
+    height: 80px;
+    transform: translateX(-15px);
+    transition-duration: 2s;
+    filter: saturate(2);
+}
+
 .pagination {
     display: flex;
     flex-direction: row;
@@ -137,13 +153,14 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: .5rem .75rem;
     margin: .25rem 0;
     font-size: .625rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.678);
 }
 
 @media screen and (min-width: 380px) {
