--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,7 +11,7 @@ body {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-image: url(https://desenhoseducativos.com.br/wp-content/uploads/2018/06/poekmon-750x430.jpg);
 }
 
 @media screen and (min-width: 992px) {
