--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,7 +11,7 @@ body {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: hsla(89, 43%, 51%, 0.3);
 }
 
 @media screen and (min-width: 992px) {
@@ -21,4 +21,9 @@ body {
         margin: 1rem auto;
         border-radius: 1rem;
     }
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
 }
