--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -141,7 +141,7 @@
     margin: .25rem 0;
     font-size: .625rem;
     color: #fff;
-    background-color: #6c79db;
+    background-color: black;
     border: none;
     border-radius: 1rem;
 }
