--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -137,9 +137,10 @@
 }
 
 .pagination button {
+    width: 100%;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 16px;
     color: #fff;
     background-color: #6c79db;
     border: none;
