--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,31 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+
 }
 
 body {
-    background-color: #f6f8fc;
+    background-image: url('https://thumbs.dreamstime.com/z/pokemon-silhouette-background-vector-cartoon-symbol-art-icon-play-go-sign-concept-ball-pokeball-shape-pokemon-silhouette-142907703.jpg?w=992');
+    background-size: cover;
 }
 
 .content {
-    width: 100vw;
     height: 100vh;
+    width: 100vw;
     padding: 1rem;
-    background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
-        height: auto;
         margin: 1rem auto;
+        height: auto;
         border-radius: 1rem;
     }
+
+}
+
+.content h1 {
+    margin: 0;
+    text-align: center;
 }
