Modificação do fundo

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('https://thumbs.dreamstime.com/z/pokemon-silhouette-background-vector-cartoon-symbol-art-icon-play-go-sign-concept-ball-pokeball-shape-pokemon-silhouette-142907703.jpg?w=992');
+    background-image: url('/imagens/fundo.jpg');
     background-size: cover;
 }
 
