--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -78,24 +78,27 @@
     background-color: #f9aec7;
 }
 
-.pokemon {
+.pokemon:hover {
+    transform: scale(1.1);
+}
+
+.pokemon{
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
-    border-radius: 1rem;
-}
 
-.pokemon .number {
-    color: #000;
+   border-radius: 1rem;
+}
+.pokemon .number{
+    color: black;
     opacity: .3;
     text-align: right;
     font-size: .625rem;
 }
-
 .pokemon .name {
     text-transform: capitalize;
-    color: #fff;
+    color: white;
     margin-bottom: .25rem;
 }
 
@@ -105,27 +108,53 @@
     align-items: center;
     justify-content: space-between;
 }
-
 .pokemon .detail .types {
     padding: 0;
     margin: 0;
     list-style: none;
 }
+.pokemon .detail .types .type{
 
-.pokemon .detail .types .type {
     color: #fff;
+    text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.904);
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+    text-transform: capitalize;
 }
 
+.height, .weight{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    
+}
+.height, .weight{
+    background-color: #557e80;
+    color: white;
+    text-shadow: 1px 1px 15px rgba(0, 0, 0, 1);
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+    text-transform: capitalize;
+}
+.type:hover, .weight:hover, .height:hover{
+    scale: 1.2;
+}
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
 }
+img:hover {
+    transform: scale(1.3);
+}
+
 
 .pagination {
     display: flex;
@@ -135,17 +164,16 @@
     width: 100%;
     padding: 1rem;
 }
-
-.pagination button {
+.pagination button{
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .800rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
 }
-
+    
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
