--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,190 @@
 .pokemons {
+
+    list-style: none;
+    padding: 0;
+    margin: 0;
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+
 }
 
 .normal {
-    background-color: #a6a877;
+    background-color: #A8A77A; 
 }
-
-.grass {
-    background-color: #77c850;
-}
-
 .fire {
-    background-color: #ee7f30;
+    background-color: #EE8130
 }
-
 .water {
-    background-color: #678fee;
+    background-color: #6390F0 
 }
-
-.electric {
-    background-color: #f7cf2e;
+.electric{
+    background-color: #F7D02C 
 }
-
+.grass {
+    background-color: #7AC74C }
 .ice {
-    background-color: #98d5d7;
+    background-color: #96D9D6 
 }
-
-.ground {
-    background-color: #dfbf69;
+.fighting{
+    background-color:  #C22E28 
 }
-
-.flying {
-    background-color: #a98ff0;
-}
-
 .poison {
-    background-color: #a040a0;
+    background-color:  #A33EA1 
 }
-
-.fighting {
-    background-color: #bf3029;
+.ground {
+    background-color: #E2BF65 
 }
-
-.psychic {
-    background-color: #f65687;
+.flying {
+    background-color: #A98FF3 
 }
-
-.dark {
-    background-color: #725847;
+.psychic{
+    background-color:  #F95587 
 }
-
+.bug { 
+    background-color: #A6B91A 
+}
 .rock {
-    background-color: #b8a137;
+    background-color: #B6A136 
 }
-
-.bug {
-    background-color: #a8b720;
+.ghost { 
+    background-color: #735797 
 }
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
 .dragon {
-    background-color: #6f38f6;
+    background-color: #6F35FC 
 }
-
+.dark {
+    background-color: #705746 
+}
+.steel {
+    background-color: #B7B7CE 
+}
 .fairy {
-    background-color: #f9aec7;
+    background-color: #D685AD
 }
 
 .pokemon {
+
+    margin: .5rem;
+    padding: 2rem 1rem;
+    color: #fff;
+    border-radius: .5rem;
     display: flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-}
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
 }
 
 .pokemon .name {
-    text-transform: capitalize;
+
     color: #fff;
     margin-bottom: .25rem;
+    text-transform: capitalize
+
+}
+
+.pokemon .number {
+
+    color: #000;
+    opacity: 0.3;
+    text-align: right;
+    font-size: .625rem;
+
 }
 
 .pokemon .detail {
+
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .pokemon .detail .types {
+
     padding: 0;
     margin: 0;
     list-style: none;
+
 }
 
 .pokemon .detail .types .type {
+
     color: #fff;
     padding: .25rem .5rem;
-    margin: .25rem 0;
+    margin: .25rem;
     font-size: .625rem;
+    padding: .25rem .5rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+    text-transform: capitalize;
+
 }
 
 .pokemon .detail img {
+
     max-width: 100%;
     height: 70px;
+    align-self: flex;
+
 }
 
 .pagination {
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
     padding: 1rem;
+
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
+
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    color: #fff;
+    padding:  .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    
+
+
 }
 
+
+
 @media screen and (min-width: 380px) {
+
     .pokemons {
+
         grid-template-columns: 1fr 1fr;
+
+
     }
+
 }
 
 @media screen and (min-width: 576px) {
+
     .pokemons {
+
         grid-template-columns: 1fr 1fr 1fr;
+
+
     }
+
 }
 
 @media screen and (min-width: 992px) {
+
     .pokemons {
+
         grid-template-columns: 1fr 1fr 1fr 1fr;
+
+
     }
+
 }
