--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,10 +1,13 @@
-* {
+/* fonte roboto global */
+* { 
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
-body {
-    background-color: #f6f8fc;
+.body{
+  
+background-color: #f6f8fc;
+
 }
 
 .content {
@@ -12,13 +15,42 @@ body {
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+ 
 }
+
+.tipo{ 
+
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 1rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.habilidade 
+{
+
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 1rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+
+
 
 @media screen and (min-width: 992px) {
     .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+    max-width: auto;
+    margin: 0 auto;
+    margin: 1rem;
+    border-radius: 1rem;
+
     }
+
 }
