--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,33 @@
+* {
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #f6f8fc;
+}
+
+
+
+
+.content {
+    width: 100vw;
+    height: 100vh;
+    padding: 1rem;
+    background-color: #fff;
+}
+
+
+
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: auto;
+        margin: 0 auto;
+        margin: 1rem;
+        border-radius: 1rem;
+    }
+}
+
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
@@ -6,6 +36,7 @@
     list-style: none;
 }
 
+/* Cores para os tipos de Pokémon */
 .normal {
     background-color: #a6a877;
 }
@@ -78,25 +109,101 @@
     background-color: #f9aec7;
 }
 
+/* cores ao card  */
+
+.popup-content.normal {
+    background-color: #a4c578;
+}
+
+.popup-content.grass {
+    background-color: #77c850;
+}
+
+.popup-content.water {
+    background-color: #678fee;
+}
+
+.popup-content.electric {
+    background-color: #f7cf2e;
+}
+
+.popup-content.fire {
+    background-color: #ee7f30;
+}
+
+.popup-content.ice {
+    background-color: #98d5d7;
+}
+
+.popup-content.ground {
+    background-color: #dfbf69;
+}
+
+.popup-content.flying {
+    background-color: #a98ff0;
+}
+
+.popup-content.poison {
+    background-color: #a040a0;
+}
+
+.popup-content.fighting {
+    background-color: #bf3029;
+}
+
+.popup-content.psychic {
+    background-color: #f65687;
+}
+
+.popup-content.dark {
+    background-color: #725847;
+}
+
+.popup-content.rock {
+    background-color: #b8a137;
+}
+
+.popup-content.bug {
+    background-color: #a8b720;
+}
+
+.popup-content.ghost {
+    background-color: #6e5896;
+}
+
+.popup-content.steel {
+    background-color: #b9b7cf;
+}
+
+.popup-content.dragon {
+    background-color: #6f38f6;
+}
+
+.popup-content.fairy {
+    background-color: #f9aec7;
+}
+
+
+/* Estilos para os cards de Pokémon */
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: 0.3;
     text-align: right;
-    font-size: .625rem;
+    font-size: 0.625rem;
 }
 
 .pokemon .name {
     text-transform: capitalize;
     color: #fff;
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
 }
 
 .pokemon .detail {
@@ -114,9 +221,9 @@
 
 .pokemon .detail .types .type {
     color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
@@ -126,6 +233,7 @@
     max-width: 100%;
     height: 70px;
 }
+
 
 .pagination {
     display: flex;
@@ -137,13 +245,60 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+}
+
+/* Estilos para o popup */
+.popup {
+    text-transform: capitalize;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+    font-family: 'Roboto',sans-serif;
+    font-size: 1rem;
+    position: absolute;
+    
+    top: 50%;
+    left: 50%;
+    
+    transform: translate(-50%, -50%);
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 1rem;
+    text-align: center;
+}
+
+
+
+/* Estilos para o botão de fechar */
+.popup-content button {
+    background-color: #6c79db;
+    color: #fff;
+    border: none;
+    margin-top: 10px; /* Margem de cima */
+    margin-bottom: 10px; /* Margem de baixo */
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.popup-content button:hover {
+    background-color: #5564a7;
 }
 
 @media screen and (min-width: 380px) {
