--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #bfc7d8;
 }
 
 .content {
@@ -12,6 +12,12 @@ body {
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+}
+
+.content h1 {
+    background-color: rgb(248, 248, 248);
+   color: blue;
+   transition: 2s;
 }
 
 @media screen and (min-width: 992px) {
