--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -91,12 +91,14 @@
     opacity: .3;
     text-align: right;
     font-size: .625rem;
+    font-family: 'Pokemon Solid', sans-serif;
 }
 
 .pokemon .name {
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
+    font-family: 'Pokemon Solid', sans-serif;
 }
 
 .pokemon .detail {
@@ -120,6 +122,7 @@
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+    font-family: monospace;
 }
 
 .pokemon .detail img {
