--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -78,6 +78,77 @@
     background-color: #f9aec7;
 }
 
+
+/* abilities colors */
+
+
+
+.overgrow {
+    background-color: #77c850;
+}
+
+.chlorophyll {
+    background-color: #a040a0;;
+}
+
+.blaze {
+    background-color: #ee7f30;;
+}
+
+.solar-power {
+    background-color: #ee7f30;;
+}
+
+.torrent {
+    background-color: #678fee;
+}
+
+.rain-dish {
+    background-color: #678fee;
+}
+
+.shield-dust {
+    background-color: #a8b720;
+}
+
+.run-away {
+    background-color: #a8b720;
+}
+
+.shed-skin {
+    background-color: #a8b720;
+}
+
+.compound-eyes {
+    background-color: #a8b720;
+}
+
+.tinted-lens {
+    background-color: #a98ff0;
+}
+
+.swarm {
+    background-color: #a8b720;
+}
+
+.sniper {
+    background-color: #a8b720;
+}
+
+
+.keen-eye {
+    background-color: #a6a877;
+}
+
+.tangled-feet {
+    background-color: #a6a877;
+}
+
+.big-pecks {
+    background-color: #a6a877;
+}
+
+
 .pokemon {
     display: flex;
     flex-direction: column;
@@ -122,9 +193,35 @@
     text-align: center;
 }
 
+.pokemon .detail .abilities {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .abilities .ability {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+}
+
+.pokemon .detailsPokemon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+    font-size: 0.625rem;
 }
 
 .pagination {
