--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,126 @@
-.pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
+:root{
+    --font-body: 'Roboto', sans-serif;
+    --color-white: #FFFFFF;
+    --color-black: #000;
+    --color-grey: #f6f8fc;
+    --color-normal: #a6a877;
+    --color-grass: #77c850;
+    --color-fire: #ee7f30;
+    --color-water: #678fee;
+    --color-electric: #f7cf2e;
+    --color-ice: #98d5d7;
+    --color-ground: #dfbf69;
+    --color-flying: #a98ff0;
+    --color-poison: #a040a0;
+    --color-fighting: #bf3029;
+    --color-psychic: #f65687;
+    --color-dark: #725847;
+    --color-rock: #b8a137;
+    --color-bug: #a8b720;
+    --color-ghost: #6e5896;
+    --color-steel: #b9b7cf;
+    --color-dragon: #6f38f6;
+    --color-fairy: #f9aec7;
+    --color-button: #6c79db;
+}
+
+.number{
+    color: var(--color-black);
+    opacity: .3;
+}
+
+.name{
+    color: var(--color-white);
+    text-transform: capitalize;
+}
+
+.types{
     list-style: none;
+}
+
+.type{
+    color: var(--color-white);
+    filter: brightness(1.1);
+    margin-left: auto;
 }
 
 .normal {
-    background-color: #a6a877;
+    background-color: var(--color-normal) !important;
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: var(--color-grass) !important;
 }
 
 .fire {
-    background-color: #ee7f30;
+    background-color: var(--color-fire) !important;
 }
 
 .water {
-    background-color: #678fee;
+    background-color: var(--color-water) !important;
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background-color: var(--color-electric) !important;
 }
 
 .ice {
-    background-color: #98d5d7;
+    background-color: var(--color-ice) !important;
 }
 
 .ground {
-    background-color: #dfbf69;
+    background-color: var(--color-ground) !important;
 }
 
 .flying {
-    background-color: #a98ff0;
+    background-color: var(--color-flying) !important;
 }
 
 .poison {
-    background-color: #a040a0;
+    background-color: var(--color-poison) !important;
 }
 
 .fighting {
-    background-color: #bf3029;
+    background-color: var(--color-fighting) !important;
 }
 
 .psychic {
-    background-color: #f65687;
+    background-color: var(--color-psychic) !important;
 }
 
 .dark {
-    background-color: #725847;
+    background-color: var(--color-dark) !important;
 }
 
 .rock {
-    background-color: #b8a137;
+    background-color: var(--color-rock) !important;
 }
 
 .bug {
-    background-color: #a8b720;
+    background-color: var(--color-bug) !important;
 }
 
 .ghost {
-    background-color: #6e5896;
+    background-color: var(--color-ghost) !important;
 }
 
 .steel {
-    background-color: #b9b7cf;
+    background-color: var(--color-steel) !important;
 }
 
 .dragon {
-    background-color: #6f38f6;
+    background-color: var(--color-dragon) !important;
 }
 
 .fairy {
-    background-color: #f9aec7;
+    background-color: var(--color-fairy) !important;
 }
 
-.pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+.items{
+    background-color: var(--color-white);
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
-}
-
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
-}
-
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
-}
-
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+.back{
+    color: var(--color-black);
+    opacity: .6;
 }
