Feat: Add Details Pokemon

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,3 +22,26 @@ body {
         border-radius: 1rem;
     }
 }
+
+.tipo{ 
+
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 1rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.habilidade 
+{
+
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 1rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
