--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,6 +14,13 @@ body {
     background-color: #fff;
 }
 
+h1{
+    text-align: center;
+    background-color: rgba(13, 128, 9, 0.678);
+    border: 3px dashed #4294b9;
+    font-style: italic;
+    color:  yellow;
+}
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
