--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,6 +7,22 @@ body {
     background-color: #f6f8fc;
 }
 
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 .content {
     width: 100vw;
     height: 100vh;
@@ -22,3 +38,9 @@ body {
         border-radius: 1rem;
     }
 }
+
+.content h1 {
+    margin: 0;
+
+}
+
