--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,6 +6,17 @@
     list-style: none;
 }
 
+
+.pokemon {
+    display: flex;
+    flex-direction: column;
+    background-color: #62667a;
+    color: #fff;
+    margin: .5rem;
+    padding: 1rem;
+    border-radius: 1rem
+}
+
 .normal {
     background-color: #a6a877;
 }
@@ -78,14 +89,6 @@
     background-color: #f9aec7;
 }
 
-.pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-}
-
 .pokemon .number {
     color: #000;
     opacity: .3;
@@ -120,11 +123,13 @@
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+    text-transform: capitalize;
 }
 
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+
 }
 
 .pagination {
@@ -146,9 +151,89 @@
     border-radius: 1rem;
 }
 
+
+#pokeInfo {
+    text-align: center;
+    max-width: 350px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1rem;
+    border-style: solid;
+    opacity: 0;
+    background-color: #fff;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    text-transform: capitalize;
+}
+
+#pokeInfo .active {
+    opacity: 1;
+}
+
+#pokeInfo .pokeInfoTypes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;;
+    list-style: none;
+    padding: 0.5rem;
+}
+
+#pokeInfo .type {
+    width: 75px;
+    color: #FFF;
+    margin: .25rem 0.25rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+    text-transform: capitalize;
+    padding: 0.5rem;
+}
+
+#pokeInfo img {
+    width: 200px;
+    height: auto;
+}
+
+#pokeInfo .pokeInfoStats {
+    list-style: none;
+    padding: 0;
+}
+
+.overlay {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background:rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    pointer-events: none;
+    top: 0;
+  }
+
+  #closeButton{ 
+    position: absolute;
+    right: 0;
+    margin: 1rem;
+    background-color: #fff;
+    border: none;
+    border-radius: 1rem;
+    color: #000;
+    padding: .75rem .75rem;
+    font-size: 1rem;
+}
+
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
+    }
+
+    .pokemon .detail img {
+        height: 90px;
     }
 }
 
@@ -156,10 +241,22 @@
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    .pokemon .detail img {
+        height: 90px;
+    }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
+
+    .pokemon .detail img {
+        height: 115px;
+    }
+
+
+
+
 }
