--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,16 +8,16 @@ body {
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
     padding: 1rem;
+    height: 100vh;
+    width: 100vw;
     background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
-        height: auto;
+        max-height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
     }
