--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,14 +4,46 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    position: relative;
+    background-size: cover;
+    background: rgb(0, 0, 0) url('/assets/plano-de-fundo/pokemon-bolas.jpg') no-repeat fixed;
+    
+    
+}
+
+body::before{
+    content: '';
+    background-color: rgb(0, 0, 0, .5);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top:0 ;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: 0;
+    padding:0 ;
 }
 
 .content {
-    width: 100vw;
+    position: relative;
+    width: 100%;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: rgba(0, 0, 0, 0.617);
+    backdrop-filter: blur(5px);
+    
+}
+
+#poketitle {
+    height: 45px;
+    width: 160px;
+    padding: 1rem 2rem;
+    color: #e50914;
+    position: relative;
+    text-decoration: underline;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
