--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -116,15 +116,16 @@
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 1rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
 }
 
 .pokemon .detail img {
+    width: 70%;
     max-width: 100%;
-    height: 70px;
+    height: auto;
 }
 
 .pagination {
@@ -144,6 +145,11 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+}
+
+#loadMoreButton:hover {
+    cursor: pointer;
+    zoom: 1.2;
 }
 
 @media screen and (min-width: 380px) {
