--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,9 +1,9 @@
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .normal {
@@ -81,22 +81,22 @@
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
+    margin: 0.5rem;
+    padding: 0.5rem 1rem 1rem 1rem;
     border-radius: 1rem;
 }
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: 0.3;
     text-align: right;
-    font-size: .625rem;
+    font-size: 0.625rem;
 }
 
 .pokemon .name {
-    text-transform: capitalize;
     color: #fff;
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
+    text-transform: capitalize;
 }
 
 .pokemon .detail {
@@ -114,9 +114,9 @@
 
 .pokemon .detail .types .type {
     color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
@@ -125,6 +125,7 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+    align-self: flex-end;
 }
 
 .pagination {
@@ -137,11 +138,30 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     color: #fff;
     background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
+
+.buttonDetail{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: right;
+    width: 100%;
+    padding: 1rem; 
+}
+
+#myBtn {
+    text-align: right;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.625rem;
+    color: #000;
+    background-color: #fff;
     border: none;
     border-radius: 1rem;
 }
@@ -149,17 +169,20 @@
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
+        
     }
 }
 
 @media screen and (min-width: 576px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
+        
     }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        
     }
 }
